reduced the width of headline links to make sure mobile drop down btns are not pushed off screen

--- a/src/components/SingleHeadline.css
+++ b/src/components/SingleHeadline.css
@@ -32,7 +32,7 @@
   margin: auto;
   margin-bottom: 3px;
   display: inline-block;
-  width: 85%;
+  width: 75%;
   color: white;
   vertical-align: middle;
   transition: 0.25 ease-in-out;
